<resources>
    <string name="app_name">JavaDesignMode</string>
    <string name="jump_2_build">Jump 2 Build</string>
    <string name="jump_2_protoype">jump 2 Protoype</string>
    <string name="jump_2_adapter">jump 2 Adapter</string>
    <string name="jump_2_factory">jump 2 Factory</string>
    <string name="jump_2_abstractfactory">jump 2 AbstractFactory</string>
    <string name="jump_2_decorator">jump 2 decorator</string>
    <string name="jump_2_proxy_mode">jump 2 ProxyMode</string>
    <string name="jump_2_facade_mode">jump 2 facade mode</string>
    <string name="jump_2_bridge">jump 2 bridge</string>
    <string name="jump_2_composite">jump 2 Composite</string>
    <string name="jump_2_flyweight">jump 2 flyweight</string>
    <string name="jump_2_strategy">jump 2 strategy</string>
    <string name="jump_2_tem_method">jump 2 template method</string>
    <string name="jump_2_observer">jump 2 observer</string>
    <string name="jump_2_iterator">jump 2 iterator</string>
    <string name="jump2chain">jump 2 ResponsibilityChain</string>
    <string name="jump2command">jump 2 command</string>
    <string name="jump2Memento">jump 2 Memento</string>
    <string name="jump2State">jump 2 state</string>
</resources>
